--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
     "name": "ngplay",
     "version": "0.0.1",
     "dependencies": {
-        "angular": "1.2.17"
+        "angular": "1.2.17",
+        "angular-route": "1.2.17"
     }
 }
