--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
-    "name": "ngplay",
-    "version": "0.0.1",
-    "dependencies": {
-        "angular": "1.2.17",
-        "angular-route": "1.2.17"
-    }
+  "name": "ngplay",
+  "version": "0.0.1",
+  "dependencies": {
+    "angular": "1.2.17",
+    "angular-route": "1.2.17",
+    "angular-animate": "1.2.7"
+  }
 }
